updates in user creation method

--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,8 @@
+#DB URL
 DATABASE_URL=postgresql://<username>:<password>@<host>:<port>/<database>
+
+# Keycloak Admin Credentials
+KEYCLOAK_SERVER_URL=""
+KEYCLOAK_ADMIN_USERNAME=""
+KEYCLOAK_ADMIN_PASSWORD=""
+KEYCLOAK_REALM_NAME=""
