--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -1,26 +1,33 @@
-name: Deploy to EC2
+name: Deploy FastAPI App to EC2
 
 on:
   push:
     branches:
-      - main
+      - main   # Trigger on push to the 'main' branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout the repository
+      uses: actions/checkout@v2
 
-      - name: SSH into EC2 and deploy
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd /root/FastAPI/fixNow-backEnd
-            git pull origin main
-            docker-compose down
-            docker-compose up -d --build
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
+    - name: Deploy to EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "Pulling the latest code from Git..."
+          cd /home/ec2-user/FastAPI/fixNow-backEnd || exit
+          git pull origin main || exit
+
+          echo "Rebuilding and restarting Docker container..."
+          docker-compose down || exit
+          docker-compose up -d --build || exit
+
+          echo "Deployment complete!"
+        EOF
