--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -3,7 +3,7 @@ name: Deploy FastAPI App to EC2
 on:
   push:
     branches:
-      - main   # Trigger on push to the 'main' branch
+      - main
 
 jobs:
   deploy:
@@ -13,14 +13,14 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v2
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
-    - name: Deploy to EC2
+    - name: Create PEM file
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+        echo "${{ secrets.EC2_PEM_FILE }}" > ec2-key.pem
+        chmod 400 ec2-key.pem
+
+    - name: Deploy to EC2 via SSH
+      run: |
+        ssh -i ec2-key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           echo "Pulling the latest code from Git..."
           cd /home/ec2-user/FastAPI/fixNow-backEnd || exit
           git pull origin main || exit
