--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -21,13 +21,16 @@ jobs:
     - name: Deploy to EC2 via SSH
       run: |
         ssh -i ec2-key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "Setting Git safe directory..."
+          git config --global --add safe.directory /home/ec2-user/FastAPI/fixNow-backEnd || exit
+    
           echo "Pulling the latest code from Git..."
           cd /home/ec2-user/FastAPI/fixNow-backEnd || exit
           git pull origin main || exit
-
+    
           echo "Rebuilding and restarting Docker container..."
           docker-compose down || exit
           docker-compose up -d --build || exit
-
+    
           echo "Deployment complete!"
         EOF
